fix error is sidebar collapse CSS

--- a/src/base/static/scss/_sidebar.scss
+++ b/src/base/static/scss/_sidebar.scss
@@ -65,6 +65,8 @@
 
 #right-sidebar-container {
     width: 0;
+    position: absolute;
+    right: 0;
     .collapse-btn:before {
         content: "\276E";
     }
